# heatmetrics_python

./: LICENSE  README.md  pyproject.toml
src/heatmetrics_python/: Tglobe.py  Tmrt.py  Tpsy.py  Twb.py  __init__.py  calc_cza.py  calc_cza_int.py  calc_fdir.py  calc_solarDA.py  calc_solarHA.py  calc_solar_parameters.py  daynum.py  dew_point.py  diffusivity.py  emis_atm.py  esat.py  est_wind_speed.py  evap.py  h_cylinder_in_air.py  h_sphere_in_air.py  humidex.py  net.py  rh.py  solarposition.py  stab_srdt.py  td.py  thermal_cond.py  utci.py  viscosity.py  wbgt.py
src/heatmetrics_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
