[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heatmetrics_python"
version = "0.0.26"
description = "Provides functions to calculate the heat metrics"
authors = [
    {name = "Jinjie Liu", email = "liujinjie26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"Homepage" = "https://github.com/Climate-CAFE/heatmetrics_python"
Issues = "https://github.com/Climate-CAFE/heatmetrics_python/issues"
